Scroll into view

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 <script src="vendor/jquery/jquery.inview.js"></script>
+<script src="vendor/jquery/jquery.scrollIntoView.min.js"></script>
 
 <script src="vendor/handlebars.js"></script>
 <script src="vendor/underscore.js"></script>
