--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- templates -->
 
 <script type="text/html" data-template="Image">
-	<a href="http://i.imgur.com/{{hash}}{{ext}}">{{#if title}}<div class="title">{{title}}</div>{{/if}}<img src="http://i.imgur.com/{{hash}}b.jpg"></a></script>
+	<a href="http://i.imgur.com/{{hash}}{{ext}}"><img src="http://i.imgur.com/{{hash}}b.jpg">{{#if title}}<div class="title">{{title}}</div>{{/if}}</a></script>
 
 <script type="text/html" data-template="Viewer">
 	{{#if title}}<a href="http://imgur.com/{{hash}}" target="_new" class="title">{{title}}</a>{{/if}}
